# logic-arena

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  server.mjs
backend/: .env.example  README.md  conftest.py  openapi.json  pyproject.toml  pytest.ini
backend/accounts/: __init__.py  selectors.py
backend/accounts/application/: __init__.py  services.py
backend/accounts/interface/: __init__.py  api.py
backend/apps/accounts/: schemas.py  selectors.py
backend/apps/arena/: api.py  catalog.py  explanation_builder.py  feedback.py  models.py  schemas.py  services.py
backend/apps/catalog/: __init__.py  selectors.py
backend/apps/learning/: __init__.py  selectors.py
backend/apps/practice/: schemas.py  selectors.py
backend/apps/progress/: __init__.py  schemas.py  (+1 more)
backend/arena/: admin.py  api.py  catalog.py  explanation_builder.py  feedback.py  http_contracts.py  models.py  schemas.py  selectors.py  services.py  tests.py
backend/catalog/: selectors.py
backend/config/: settings.py  urls.py
backend/learning/: selectors.py
backend/logic_arena_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/practice/: __init__.py  schemas.py  selectors.py
backend/progress/: selectors.py
backend/tests/: test_accounts.py  test_architecture.py  test_auth.py  test_catalog.py  test_course_sync.py  test_learning.py  test_phase1_review_regressions.py  test_practice.py  test_practice_domain.py  test_progress.py  test_progress_domain.py  test_review.py  test_selectors.py
(+230 files in other folders)
